# CLabs

EightsCLab/: CMakeLists.txt  main.c
EightsCLab/binaryFiles/: binaryFiles.c  binaryFiles.h
EightsCLab/inputManager/: getInt.c
EightsCLab/memoryAllocation/: memoryAllocation.c  memoryAllocation.h
EightsCLab/sorting/: sorting.c  sorting.h
EightsCLab/strings/: strings.c  strings.h
EightsCLab/tasks/: task1.c  task2.c  task3.c  task4.c  tasks.h
NinthCLab/: CMakeLists.txt  main.c
NinthCLab/inputManager/: getInt.h
NinthCLab/memoryAllocation/: memoryAllocation.c
NinthCLab/strings/: strings.c  strings.h
NinthCLab/tasks/: task1.c  task2.c  task3.c  task4.c  tasks.h
NinthCLab/textFiles/: textFiles.c  textFiles.h
TenthCLab/: CMakeLists.txt  main.c
TenthCLab/TenthCLab/Data/: data.txt
TenthCLab/TenthCLab/filesManager/: filesManager.c
TenthCLab/TenthCLab/inputManager/: getInt.c  getInt.h
TenthCLab/TenthCLab/memoryManager/: memoryManager.c
TenthCLab/TenthCLab/stringManager/: stringManager.c  stringManager.h
TenthCLab/TenthCLab/studentsManager/: studentsManager.c  studentsManager.h
TenthCLab/TenthCLab/taskManager/: task2.c  taskManager.h
TenthCLab/filesManager/: filesManager.h
TenthCLab/memoryManager/: memoryManager.c  memoryManager.h
TenthCLab/taskManager/: task1.c  taskManager.c
